--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Mob store</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/all.css" />
+    <link rel="icon" type="image/png" href="imgs/logo.png">
+
   </head>
   <body>
     <!-- //////// ////////////////////////////////// SEC 1 ///////////////////////////////////////////////////////////// -->
